feat(home section): create a component only for the home section and create the change language feat

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -12,9 +12,9 @@
 @import './components/footer.scss';
 @import './components/background.scss';
 
-@import './pages/home/home.scss';
+@import './sections/home/home.scss';
 
-@import './pages/about/about.scss';
+@import './sections/about/about.scss';
 
 * {  
   box-sizing: border-box;
