--- a/src/app/styles/components/header/header.scss
+++ b/src/app/styles/components/header/header.scss
@@ -99,7 +99,7 @@ header {
 
     div.header {
       display: grid;
-      grid-template-columns: 18rem 2fr;
+      grid-template-columns: 26% 2fr;
 
       h1 {
         font-size: 1.8125rem;
@@ -146,7 +146,7 @@ header {
 @media (min-width: 1100px) {
   header {
     div.header {
-      grid-template-columns: 1fr 2fr;
+      grid-template-columns: 31% 2fr;
 
       .opened-nav {
         justify-content: space-between;
@@ -156,8 +156,12 @@ header {
         font-size: 2rem;
       }
     }
-      
+  }
+}
 
+@media (min-width: 1250px) {
+  header div.header {
+    grid-template-columns: 1fr 2fr;
   }
 }
 
@@ -171,6 +175,7 @@ header {
 
       nav  {
         ul {
+          width: 36vw;
           gap: 3rem;
         }
       }
