--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -5,7 +5,7 @@
 
 @import './components/card.scss';
 @import './components/textCard.scss';
-@import './components/listCard.scss';
+@import './components/technologiesCard.scss';
 @import './components/projectCard.scss';
 @import './components/contactCard.scss';
 @import './components/loading.scss';
