fix(technologies section): fix a bug that some svgs get bigger than usual

--- a/src/app/styles/components/technologiesCard.scss
+++ b/src/app/styles/components/technologiesCard.scss
@@ -55,8 +55,8 @@
       margin-bottom: 0.25rem;
 
       img {
-        width: auto;
-        height: auto;
+        width: 3.375rem;
+        height: 3.375rem;
       }
     }
   }
