--- a/src/app/styles/components/header/header.scss
+++ b/src/app/styles/components/header/header.scss
@@ -52,12 +52,13 @@ header {
     }
   
     select {
-      width: 6.25rem;
+      width: 8rem;
+      height: 1.75rem;
       border: 1px solid $secondary-color;
       border-radius: 1rem;
       margin-block: 0.25rem;
       font-size: 1rem;
-      text-indent: 0.25rem;
+      text-indent: 0.5rem;
       background-color: $primary-color;
       color: $secondary-color;
     }
@@ -99,7 +100,7 @@ header {
 
     div.header {
       display: grid;
-      grid-template-columns: 26% 2fr;
+      grid-template-columns: 27% 2fr;
 
       h1 {
         font-size: 1.8125rem;
@@ -124,7 +125,7 @@ header {
   
             li {
               a {
-                font-size: 1.5rem;
+                font-size: 1.375rem;
                 text-decoration: none;
               }
             }
@@ -135,7 +136,7 @@ header {
           display: flex;
           align-items: center;
           justify-content: center;
-          width: 8.5rem;
+          width: 10.5rem;
           height: 2rem;
         }
       }
@@ -146,7 +147,7 @@ header {
 @media (min-width: 1100px) {
   header {
     div.header {
-      grid-template-columns: 31% 2fr;
+      grid-template-columns: 32.5% 2fr;
 
       .opened-nav {
         justify-content: space-between;
