feat(background): add waves and some text onto the background

--- a/src/app/styles/components/background/circle.scss
+++ b/src/app/styles/components/background/circle.scss
@@ -97,6 +97,10 @@
         top: 45rem;
       }
 
+      &.sixth-circle {
+        top: 117rem;
+      }
+
       &.eighth-circle {
         top: 200rem;
       }
