--- a/src/app/styles/components/background/images.scss
+++ b/src/app/styles/components/background/images.scss
@@ -81,8 +81,8 @@
     }
 
     &.sass {
-      top: 115rem;
-      left: 15%;
+      top: 118rem;
+      left: 24%;
       
       path {
         fill: $primary-color;
@@ -160,6 +160,10 @@
         left: 80%;
       }
 
+      &.html {
+        right: 20%;
+      }
+
       &.css {
         top: 172rem;
       }
@@ -202,6 +206,10 @@
 
       &.nextjs {
         top: 85rem;
+      }
+
+      &.html {
+        right: 12%;
       }
 
       &.sass {
@@ -261,7 +269,8 @@
       }
 
       &.html {
-        top: 135rem;
+        top: 140rem;
+        right: 5%;
       }
 
       &.sass {
@@ -315,7 +324,8 @@
       }
 
       &.html {
-        top: 164rem;
+        top: 170rem;
+        right: 2%;
       }
 
       &.sass {
