--- a/src/app/styles/components/header/header.scss
+++ b/src/app/styles/components/header/header.scss
@@ -46,6 +46,10 @@ header {
             font-size: 1.25rem;
             text-underline-offset: 5px;
             text-decoration: underline 1px;
+
+            &:hover, &:focus {
+              font-weight: 500
+            }
           }
         }
       }
