--- a/src/app/styles/components/contactCard.scss
+++ b/src/app/styles/components/contactCard.scss
@@ -51,11 +51,6 @@
         text-align: center;
       }
 
-      p.denied {
-        color: red;
-        margin-bottom: 0.5rem;
-      }
-
       p.accepted {
         color: #6edb43;
         font-weight: 500;
@@ -66,8 +61,16 @@
     }
 
     .button-div {
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: center;
+      gap: 0.5rem;
       align-items: center;
       margin-top: 0.5rem;
+
+      &.accepted {
+        flex-direction: column;
+      }
 
       button {
         display: flex;
@@ -84,6 +87,33 @@
           display: none;
         }
       }
+
+      a {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        background-color: $primary-color;
+        height: 2.875rem;
+        padding-inline: 0.75rem;
+        border-radius: 0.25rem;
+
+        img {
+          width: 1.5rem;
+          height: 1.5rem;
+        }
+
+        span {
+          color: #25d366;
+          font-size: 1.125rem;
+        }
+      }
+    }
+
+    p.denied {
+      margin-left: 0;
+      color: red;
+      margin-top: 0.75rem;
+      text-align: center;
     }
   }
 }
@@ -121,15 +151,34 @@
           width: 21rem;
           padding: 1rem;
         }
+
       }
 
-      .button-div button {
-        padding-block: 0.875rem;
-        width: 7.5rem;
-        border-radius: 0.5rem;
+      .button-div { 
+        gap: 1rem;
 
-        &:disabled {
-          cursor: initial;
+        &.accepted {
+          flex-direction: row-reverse;
+        }
+
+        button {
+          padding-block: 0.875rem;
+          width: 7.5rem;
+          border-radius: 0.5rem;
+
+          &:disabled {
+            cursor: initial;
+          }
+        }
+
+        a {
+          height: 3.25rem;
+          padding-inline: 1rem;
+          border-radius: 0.5rem;
+
+          span {
+            font-size: 1.25rem;
+          }
         }
       }
     }
@@ -158,10 +207,6 @@
           font-size: 1.375rem;
         }
 
-        p.denied {
-          font-size: 1.125rem;
-        }
-
         p.accepted {
           font-size: 1.25rem;
           width: 26rem;
@@ -169,9 +214,27 @@
         }
       }
 
-      .button-div button {
-        width: 8rem;
+      .button-div {     
+        button {
+          width: 8rem;
+        }
+
+        a {
+          align-items: center;
+          height: 3.4375rem;
+          padding-inline: 1.25rem;
+
+          img {
+            width: 1.75rem;
+            height: 1.75rem;
+          }
+        }
       }
+    }
+
+    p.denied {
+      margin-top: 1.5rem;
+      font-size: 1.125rem;
     }
   }
 }
