feat(buttons and links): add hover and focus transition

--- a/src/app/styles/components/footer.scss
+++ b/src/app/styles/components/footer.scss
@@ -71,7 +71,7 @@ footer {
   
         &:hover, &:focus {
           background-color: $dark-gray;
-          transition: background-color 300ms ease;
+          scale: 110%;
         }
   
         &.linkedin img {
