--- a/src/app/styles/components/contactCard.scss
+++ b/src/app/styles/components/contactCard.scss
@@ -86,6 +86,10 @@
         &.hidden {
           display: none;
         }
+
+        &:hover, &:focus {
+          scale: 105%;
+        }
       }
 
       a {
@@ -105,6 +109,10 @@
         span {
           color: #25d366;
           font-size: 1.125rem;
+        }
+
+        &:hover, &:focus {
+          scale: 105%;
         }
       }
     }
