--- a/src/app/styles/components/projectCard.scss
+++ b/src/app/styles/components/projectCard.scss
@@ -77,6 +77,7 @@
               gap: 0.25rem;
               border-radius: 0.375rem;
               width: fit-content;
+              transition: scale 300ms ease-out;
 
               span {
                 color: $primary-color;
@@ -85,6 +86,11 @@
               svg {
                 width: 1.25rem;
                 height: auto;
+              }
+
+              &:hover, &:focus {
+                transition: scale 300ms ease-in;
+                scale: 107%;
               }
             }
           }
