feat(language selector): when the app starts, the prefered language is chosen

--- a/src/app/styles/components/contactCard.scss
+++ b/src/app/styles/components/contactCard.scss
@@ -52,7 +52,7 @@
       }
 
       p.accepted {
-        color: #6edb43;
+        color: #25d366;
         font-weight: 500;
         background-color: $primary-color;
         border-radius: 0.5rem;
