--- a/src/app/styles/components/technologiesCard.scss
+++ b/src/app/styles/components/technologiesCard.scss
@@ -27,7 +27,7 @@
     display: grid;
 
     grid-template-columns: repeat(5 , 1fr);
-    gap: 0.625rem 0.5rem;
+    gap: 0.75rem 0.5rem;
 
     margin-top: 0.5rem;
     margin-right: 1.375rem;
@@ -65,6 +65,7 @@
     color: $primary-color;
     font-size: 0.6875rem;
     font-weight: 500;
+    text-align: center;
   }
 }
 
@@ -106,7 +107,7 @@
 
     ul {
       grid-template-columns: repeat(6, 1fr);
-      gap: 0.75rem 0.625rem;
+      gap: 1rem 0.625rem;
     
       margin-top: 0.5rem;
     }
@@ -152,7 +153,7 @@
 
     ul {
       grid-template-columns: repeat(8, 1fr);
-      gap: 1rem 0.75rem;
+      gap: 2rem 0.75rem;
     }
 
     figure {
@@ -191,7 +192,6 @@
 
     ul {
       grid-template-columns: repeat(10, 1fr);
-      gap: 1.5rem 0.75rem;
     }
   }
 }
