fix(logo): fix size of the logo when screen width is bigger than 1024px

--- a/src/app/styles/components/header/header.scss
+++ b/src/app/styles/components/header/header.scss
@@ -106,8 +106,12 @@ header {
       display: grid;
       grid-template-columns: 27% 2fr;
 
-      h1 {
-        font-size: 1.8125rem;
+      .logo {
+        margin-right: auto;
+        
+        h1 {
+          font-size: 1.8125rem;
+        }
       }
 
       .opened-nav {
