--- a/src/app/styles/components/header/header.scss
+++ b/src/app/styles/components/header/header.scss
@@ -75,7 +75,7 @@ header {
     cursor: pointer;
   }
 
-  .burger, .x {
+  .header-button  {
     width: 3rem;
     height: 3rem;
 
@@ -98,7 +98,7 @@ header {
     width: 100vw;
     padding: 1rem;
 
-    .burger, .x {
+    .header-button {
       display: none;
     }
 
